[gd_scene format=3 uid="uid://dwxtvhlvxh0nh"]

[ext_resource type="Script" uid="uid://bapcbck8pdmrm" path="res://scripts/player.gd" id="1_rpqav"]

[sub_resource type="Animation" id="Animation_kyqiw"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_rpqav"]
resource_name = "headbob"
length = 0.3
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.1, 1, 0, 0.05, 0, 0.2, 1, 0, -0.05, 0, 0.3, 1, 0, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gntrk"]
_data = {
&"RESET": SubResource("Animation_kyqiw"),
&"headbob": SubResource("Animation_rpqav")
}

[node name="Player" type="Node3D" unique_id=1416334045]
script = ExtResource("1_rpqav")

[node name="Camera3D" type="Camera3D" parent="." unique_id=1618346479]
current = true

[node name="FrontRay" type="RayCast3D" parent="." unique_id=1920039904]
target_position = Vector3(0, 0, -2)

[node name="BackRay" type="RayCast3D" parent="." unique_id=1728198176]
target_position = Vector3(0, 0, 2)

[node name="LeftRay" type="RayCast3D" parent="." unique_id=1647434957]
target_position = Vector3(-2, 0, 0)

[node name="RightRay" type="RayCast3D" parent="." unique_id=1006343076]
target_position = Vector3(2, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="." unique_id=1906023819]

[node name="Animation" type="AnimationPlayer" parent="." unique_id=1168198385]
libraries/ = SubResource("AnimationLibrary_gntrk")
